# pyannote_anime_speaker_diarization

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
configs/: eval.yaml  logger.yaml  quality_filter.yaml  speaker_diarization.yaml  speaker_id.yaml  train.yaml
configs/protocols/: anime.yaml
core/: config.py  constants.py  speaker_diarization.py
core/data/: etl.py
core/eval/: metrics.py
core/postprocess/: audacity.py  export.py  quality.py
core/preprocess/: audio_io.py  utils.py
core/speaker_id/: assign.py  embed.py  refs.py  select.py  store.py
tests/: test_audio_io.py  test_postprocess_export.py  test_postprocess_quality.py
