[project]
name = "anime-diarization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jeevan Rajagopal", email = "17790351+blackhole077@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.25.1",
    "librosa>=0.11.0",
    "numpy>=2.4",
    "soundfile>=0.13.1",
    "mlflow>=3.12.0",
    "pyannote-audio>=4.0.4",
    "pydub>=0.25.1",
    "tqdm>=4.67.3",
    "lightning>=2.6.1",
    "hydra-core>=1.3.2",
    "pyannote-metrics>=4.1"
]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.7"]

[tool.uv]
package = false
